--- a/.github/workflows/release-images.yml
+++ b/.github/workflows/release-images.yml
@@ -41,6 +41,33 @@ jobs:
               echo "PUSHFLAG=" >> $GITHUB_ENV
           fi
 
+      - name: Prepare Rust Base image
+        run: |
+          docker buildx build -f build/Dockerfile \
+          --cache-to type=gha \
+          --cache-from type=gha \
+          --platform=$PLATFORMS \
+          --target rust_base \
+          .
+
+      - name: Prepare Cargo Chef cache image
+        run: |
+          docker buildx build -f build/Dockerfile \
+          --cache-to type=gha \
+          --cache-from type=gha \
+          --platform=$PLATFORMS \
+          --target chef \
+          .
+
+      - name: Build all modules
+        run: |
+          docker buildx build -f build/Dockerfile \
+          --cache-to type=gha \
+          --cache-from type=gha \
+          --platform=$PLATFORMS \
+          --target builder \
+          .
+          
       - name: Build and push REST
         run: |
           TARGET="minerva_rest"
@@ -50,6 +77,8 @@ jobs:
           IMGVERSION=`awk '/^version/{print $3}' ./$DIRNAME/Cargo.toml | tr -d '"'`
           
           docker buildx build -f build/Dockerfile \
+          --cache-to type=gha \
+          --cache-from type=gha \
           --platform=$PLATFORMS \
           --target $TARGET \
           -t $IMGNAME:$IMGVERSION \
@@ -66,6 +95,8 @@ jobs:
           IMGVERSION=`awk '/^version/{print $3}' ./$DIRNAME/Cargo.toml | tr -d '"'`
           
           docker buildx build -f build/Dockerfile \
+          --cache-to type=gha \
+          --cache-from type=gha \
           --platform=$PLATFORMS \
           --target $TARGET \
           -t $IMGNAME:$IMGVERSION \
@@ -82,6 +113,8 @@ jobs:
           IMGVERSION=`awk '/^version/{print $3}' ./$DIRNAME/Cargo.toml | tr -d '"'`
           
           docker buildx build -f build/Dockerfile \
+          --cache-to type=gha \
+          --cache-from type=gha \
           --platform=$PLATFORMS \
           --target $TARGET \
           -t $IMGNAME:$IMGVERSION \
@@ -98,6 +131,8 @@ jobs:
           IMGVERSION=`awk '/^version/{print $3}' ./$DIRNAME/Cargo.toml | tr -d '"'`
           
           docker buildx build -f build/Dockerfile \
+          --cache-to type=gha \
+          --cache-from type=gha \
           --platform=$PLATFORMS \
           --target $TARGET \
           -t $IMGNAME:$IMGVERSION \
@@ -114,6 +149,8 @@ jobs:
           IMGVERSION=`awk '/^version/{print $3}' ./$DIRNAME/Cargo.toml | tr -d '"'`
           
           docker buildx build -f build/Dockerfile \
+          --cache-to type=gha \
+          --cache-from type=gha \
           --platform=$PLATFORMS \
           --target $TARGET \
           -t $IMGNAME:$IMGVERSION \
