Make releases run automatically only when releasing tags

--- a/.github/workflows/release-images.yml
+++ b/.github/workflows/release-images.yml
@@ -1,9 +1,9 @@
 name: Release images
 
 on:
-  pull_request:
-    branches:
-      - master
+  push:
+    tags:
+      - "v*"
 
 env:
   PLATFORMS: 'linux/amd64,linux/arm64'
