--- a/minerva-cache/Cargo.toml
+++ b/minerva-cache/Cargo.toml
@@ -12,3 +12,4 @@ path = "src/lib.rs"
 redis = {version = "0.21.5", features = ["tokio-comp", "aio"]}
 futures = "0.3"
 tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync", "net"]}
+base64 = "0.13.0"
