--- a/minerva-user/Cargo.toml
+++ b/minerva-user/Cargo.toml
@@ -18,3 +18,5 @@ bb8-diesel = "0.2.1"
 futures-util = "0.3"
 chrono = {version = "0.4", features = ["serde"]}
 lapin = "2.1.1"
+log4rs = "1.2.0"
+log = "0.4"
