--- a/minerva-rest/Cargo.toml
+++ b/minerva-rest/Cargo.toml
@@ -13,6 +13,8 @@ rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
 tonic = "0.8.2"
 serde = "1.0"
 serde_json = "1.0"
+log4rs = "1.2.0"
+log = "0.4"
 
 [dev-dependencies]
 serial_test = "0.7.0"
