--- a/deploy/k8s/minerva-session.yml
+++ b/deploy/k8s/minerva-session.yml
@@ -18,14 +18,24 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 9011
+          env:
+            - name: LOG_CONFIG_FILE
+              value: "/cfg/logging.yml"
           envFrom:
             - configMapRef:
                 name: ports-configmap
             - configMapRef:
                 name: servers-configmap
+          volumeMounts:
+            - name: log-config
+              mountPath: /cfg/
           resources:
             requests:
               cpu: 100m
+      volumes:
+        - name: log-config
+          configMap:
+            name: log-configmap
   replicas: 2
   selector:
     matchLabels:
