--- a/deploy/k8s/minerva-ingress.yml
+++ b/deploy/k8s/minerva-ingress.yml
@@ -102,3 +102,23 @@ spec:
                 name: mongoexpress-svc
                 port:
                   number: 8081
+---
+# Kibana Ingress
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: kibana-ingress
+  namespace: minerva
+  annotations:
+    kubernetes.io/ingress.class: traefik
+spec:
+  rules:
+    - http:
+        paths:
+          - path: /kibana
+            pathType: Prefix
+            backend:
+              service:
+                name: kibana-svc
+                port:
+                  number: 5601
