Add initial OpenAPI documentation (Swagger + Rapidoc)

--- a/minerva-data/Cargo.toml
+++ b/minerva-data/Cargo.toml
@@ -27,3 +27,4 @@ chrono = {version = "0.4", features = ["serde"]}
 mongodb = "2.2.1"
 argon2 = "0.4"
 rand_core = {version = "0.6", features = ["std"]}
+rocket_okapi = "0.8.0-rc.2"
