--- a/minerva-rest/Cargo.toml
+++ b/minerva-rest/Cargo.toml
@@ -10,6 +10,7 @@ minerva-rpc = {path = "../minerva-rpc"}
 minerva-data = {path = "../minerva-data"}
 dotenv = "0.15.0"
 rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
+rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }
 tonic = "0.8.2"
 serde = "1.0"
 serde_json = "1.0"
