Change Rocket configuration to address profile and log level

--- a/.env
+++ b/.env
@@ -13,3 +13,6 @@ MONGO_SERVICE_SERVER=localhost
 REDIS_SERVICE_SERVER=localhost
 RABBITMQ_SERVICE_SERVER=localhost
 LOG_CONFIG_FILE=./logging.yml
+ROCKET_LOG_LEVEL=debug
+ROCKET_PROFILE=debug
+
