REST API now aware of `API_ROOT` env so that it works under subpaths

--- a/deploy/k8s/minerva-rest.yml
+++ b/deploy/k8s/minerva-rest.yml
@@ -38,6 +38,8 @@ spec:
                 name: servers-configmap
             - configMapRef:
                 name: ports-configmap
+            - configMapRef:
+                name: rest-configmap
           volumeMounts:
             - name: log-config
               mountPath: /cfg/
