--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -69,11 +69,10 @@ jobs:
           toolchain: 1.65.0
           components: clippy, rustfmt
 
-      - name: Install cargo-llvm-cov
-        uses: taiki-e/install-action@cargo-llvm-cov
-
-      - name: Install nextest
-        uses: taiki-e/install-action@nextest
+      - name: Install LLVM-Cov and Nextest
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-llvm-cov@0.5.3,cargo-nextest@0.9.47
 
       - name: Rust build cache
         uses: Swatinem/rust-cache@v2
