--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=Minerva-System_minerva-system_AYVePcmVc6lP2dl3Oqp2
 sonar.sources=.
-community.rust.lcov.reportPaths=./coverage/lcov.info
-community.rust.clippy.reportPaths=./coverage/clippy.report
-sonar.exclusions=coverage/**, build/**, deploy/**, docs/**, helpers/**, log/**, minerva_frontend/**, *.md
+community.rust.lcov.reportPaths=./lcov.info
+community.rust.clippy.reportPaths=./clippy.report
+sonar.exclusions=build/**, deploy/**, docs/**, helpers/**, log/**, minerva_frontend/**, *.md
