Remove unused cobertura.xml files when testing

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -99,12 +99,9 @@ jobs:
         uses: tailscale/github-action@main
         with:
           authkey: ${{ secrets.TAILSCALE_AUTHKEY }}
-        
-      # - name: SonarQube Scan
-      #   uses: sonarsource/sonarqube-scan-action@master
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+
+      - name: Remove unused COBERTURA coverage info
+        run: rm -f ./cobertura.xml
 
       - name: SonarQube Scan
         run: |
