Add readiness and liveness probes to SonarQube

--- a/deploy/k8s/util/sonarqube-arm64/sonarqube.yml
+++ b/deploy/k8s/util/sonarqube-arm64/sonarqube.yml
@@ -33,6 +33,20 @@ spec:
           volumeMounts:
             - name: sonarqube-data
               mountPath: /opt/sonarqube/data
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 9000
+            periodSeconds: 30
+            failureThreshold: 10
+            initialDelaySeconds: 300
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 9000
+            periodSeconds: 30
+            failureThreshold: 10
+            initialDelaySeconds: 600
       volumes:
         - name: sonarqube-data
           persistentVolumeClaim:
