Pin PgAdmin version to 7.1

--- a/deploy/k8s/util/pgadmin.yml
+++ b/deploy/k8s/util/pgadmin.yml
@@ -62,7 +62,7 @@ spec:
     spec:
       containers:
         - name: pgadmin-container
-          image: dpage/pgadmin4:latest
+          image: dpage/pgadmin4:7.1
           imagePullPolicy: Always
           ports:
             - containerPort: 5050
